@@ -2,6 +2,7 @@ Release Note
 
 * 1/27/2015
   * removed ND-specific handling for release check in AtlasJobBrokerages
+  * fixed AtlasJobBrokerages to take nStarting into account
 
 * 1/26/2015
   * changed InputChunk to recalculate weight once the site is chosen
